package com.diguage.didp.strategy;

/**
 * 具体算法 A
 *
 * @author diguage
 * @since 2017-05-16
 */
public class ConcreteStrategyA extends Strategy {
  public void algorithmInterface() {
    System.out.println("算法A实现");
  }
}
class  ConcreteStrategyA
