package com.diguage.didp.strategy;

/**
 * 具体算法 B
 *
 * @author diguage
 * @since 2017-05-16
 */
public class ConcreteStrategyB extends Strategy {
  public void algorithmInterface() {
    System.out.println("算法B实现");
  }
}
class  ConcreteStrategyB
