package com.diguage.didp.strategy;

/**
 * 具体算法 C
 *
 * @author diguage
 * @since 2017-05-16
 */
public class ConcreteStrategyC extends Strategy {
  public void algorithmInterface() {
    System.out.println("算法C实现");
  }
}
class  ConcreteStrategyC
