package com.diguage.didp.strategy;

/**
 * @author diguage
 * @since 2017-05-16
 */
public abstract class Strategy {
  public abstract void algorithmInterface();
}
class  Strategy
