@startuml
skinparam nodesep 70

title <b>策略模式</b>

class Context {
  - strategy :Strategy
  + contextInterface()
}
note top: Context 上下文，\n用一个 ConcreteStrategy 来配置，\n维护一个对 Strategy 对象的引用。

abstract class Strategy {
  + {abstract} algorithmInterface()
}
note top: 策略类，\n定义所有支持的算法的公共接口。

class ConcreteStrategyA {
  + algorithmInterface()
}

class ConcreteStrategyB {
  + algorithmInterface()
}

class ConcreteStrategyC {
  + algorithmInterface()
}

Context "-strategy" *-right- Strategy

' 这里的"实现"也可以是"继承"。不必太拘泥形式。
Strategy <|.. ConcreteStrategyA
Strategy <|.. ConcreteStrategyB
Strategy <|.. ConcreteStrategyC


note "具体策略类，\n封装了具体的算法或行为，继承于 Strategy。" as scn
ConcreteStrategyA .. scn
ConcreteStrategyB .. scn
ConcreteStrategyC .. scn

@enduml
